# ui.js

./: .bazelrc  .travis.yml  MODULE.bazel  README.md  WORKSPACE  protobuf_javascript.patch
.bcr/: metadata.template.json  source.template.json
.github/workflows/: ci.bazelrc  ci.yaml  release.yaml  release_prep.sh  release_ruleset.yaml
css/: BUILD  BUILD.bazel  goog.css  main.css
js/ui/: BUILD  BUILD.bazel  api.js  app.js  body.js  component.js  component_test.js  core.js  eventtype.js  history.js  history_test.js  home.js  injector.js  keyboard.js  list.js  main.js  markdown.js  menu.js  menushield.js  route.js  route_test.js  router.js  rules.bzl  select.js  select_test.js  syntax.js  tab.js  tabevent.js  tabs.js  template.js  tests.sh  timeline.js  timeline_events.js  timeline_old.js
js/ui/api/: event.js
js/ui/history/: event.js
js/ui/route/: event.js
soy/: BUILD  ui.soy
tests/: BUILD.bazel
