module(
    name = "stackb_ui_js",
    version = "0.0.0",
    compatibility_level = 1,
)

# -------------------------------------------------------------------
# Bazel Dependencies
# -------------------------------------------------------------------

bazel_dep(name = "io_bazel_rules_closure", version = "1.0.0")

# -------------------------------------------------------------------
# Dev  Dependencies
# -------------------------------------------------------------------

bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2", dev_dependency = True)

# -------------------------------------------------------------------
# Overrides
# -------------------------------------------------------------------

# Commit: a86e7cde7cad50dee4c284e91a2901ae15f6e436
# Date: 2025-11-19 23:29:16 +0000 UTC
# URL: https://github.com/stackb/rules_closure/commit/a86e7cde7cad50dee4c284e91a2901ae15f6e436
#
# Merge pull request #5 from stackb/pcj/label-fixes-wip
#
# Avoid self references to @io_bazel_rules_closure
# Size: 5019476 (5.0 MB)
archive_override(
    module_name = "io_bazel_rules_closure",
    sha256 = "c714fcf20139b54c898bf0d011493cc684753cc187cde7d5bfe9ddc171c66e38",
    strip_prefix = "rules_closure-a86e7cde7cad50dee4c284e91a2901ae15f6e436",
    urls = ["https://github.com/stackb/rules_closure/archive/a86e7cde7cad50dee4c284e91a2901ae15f6e436.tar.gz"],
)

# NOTE: cannot upgrade past protobuf editions...
#
# Commit: 263ee701cba6b75e1f8eddad5adcdf74718318b1
# Date: 2025-10-08 21:32:22 +0000 UTC
# URL: https://github.com/protocolbuffers/protobuf-javascript/commit/263ee701cba6b75e1f8eddad5adcdf74718318b1
#
# remove writeZigzagVarint64BigInt
# Size: 401599 (402 kB)
archive_override(
    module_name = "protobuf_javascript",
    sha256 = "8a50071fbca5e4a26361e6c9d81dd842207f0005f7cc1720226f20c25a231805",
    strip_prefix = "protobuf-javascript-263ee701cba6b75e1f8eddad5adcdf74718318b1",
    urls = ["https://github.com/protocolbuffers/protobuf-javascript/archive/263ee701cba6b75e1f8eddad5adcdf74718318b1.tar.gz"],
    patches = [":protobuf_javascript.patch"],
    patch_strip = 1,
)

# Commit: 04fc63fb40bf30d2e5e0b3786028eb41218de979
# Date: 2025-10-09 04:43:15 +0000 UTC
# URL: https://github.com/stackb/rules_proto/commit/04fc63fb40bf30d2e5e0b3786028eb41218de979
#
# Remove lock file for @maven
#
# It is shared by multiple workspaces and seems to cause problems when locked
# Size: 4088796 (4.1 MB)
archive_override(
    module_name = "build_stack_rules_proto",
    sha256 = "aff21579deef91316c726582bec71c621dde2ae2ec74099a55b637bda8997333",
    strip_prefix = "rules_proto-04fc63fb40bf30d2e5e0b3786028eb41218de979",
    urls = ["https://github.com/stackb/rules_proto/archive/04fc63fb40bf30d2e5e0b3786028eb41218de979.tar.gz"],
)

# google_bazel_common override is needed for @closure-compiler
git_override(
    module_name = "google_bazel_common",
    # Pin to newer version to fix b/408030907
    commit = "2cab52929507935aa43d460a3976d3bedc814d3a",
    remote = "https://github.com/google/bazel-common",
)
