load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_library", "closure_js_test")

package(default_visibility = ["//visibility:public"])

closure_js_library(
    name = "core",
    srcs = [
        "core.js",
    ],
    deps = [
        ":history",
        ":injector",
        ":keyboard",
        "@com_google_javascript_closure_library//closure/goog/asserts",
        "@com_google_javascript_closure_library//closure/goog/dom",
        "@com_google_javascript_closure_library//closure/goog/events",
        "@com_google_javascript_closure_library//closure/goog/events:eventhandler",
        "@com_google_javascript_closure_library//closure/goog/events:eventtarget",
        "@com_google_javascript_closure_library//closure/goog/fx:dom",
        "@com_google_javascript_closure_library//closure/goog/fx:easing",
        "@com_google_javascript_closure_library//closure/goog/history:event",
        "@com_google_javascript_closure_library//closure/goog/history:eventtype",
        "@com_google_javascript_closure_library//closure/goog/object",
        "@com_google_javascript_closure_library//closure/goog/promise",
        "@com_google_javascript_closure_library//closure/goog/promise:resolver",
        "@com_google_javascript_closure_library//closure/goog/string",
        "@com_google_javascript_closure_library//closure/goog/style",
        "@com_google_javascript_closure_library//closure/goog/ui:component",
        "@com_google_javascript_closure_library//closure/goog/ui:control",
    ],
)

closure_js_library(
    name = "history",
    srcs = [
        "history.js",
        "history/event.js",
    ],
    deps = [
        "@com_google_javascript_closure_library//closure/goog/asserts",
        "@com_google_javascript_closure_library//closure/goog/dom",
        "@com_google_javascript_closure_library//closure/goog/dom:tagname",
        "@com_google_javascript_closure_library//closure/goog/events",
        "@com_google_javascript_closure_library//closure/goog/events:event",
        "@com_google_javascript_closure_library//closure/goog/events:eventtarget",
        "@com_google_javascript_closure_library//closure/goog/events:eventtype",
        "@com_google_javascript_closure_library//closure/goog/history:event",
        "@com_google_javascript_closure_library//closure/goog/history:eventtype",
        "@com_google_javascript_closure_library//closure/goog/history:html5history",
        "@com_google_javascript_closure_library//closure/goog/string",
    ],
)

closure_js_library(
    name = "keyboard",
    srcs = [
        "keyboard.js",
    ],
    deps = [
        "@com_google_javascript_closure_library//closure/goog/disposable",
        "@com_google_javascript_closure_library//closure/goog/events",
        "@com_google_javascript_closure_library//closure/goog/object",
        "@com_google_javascript_closure_library//closure/goog/ui:keyboardshortcuthandler",
    ],
)

closure_js_library(
    name = "template",
    srcs = [
        "template.js",
    ],
    deps = [
        ":core",
        "@com_google_javascript_closure_library//closure/goog/dom",
        "@com_google_javascript_closure_library//closure/goog/soy",
    ],
)

closure_js_library(
    name = "select",
    srcs = [
        "select.js",
        "tab.js",
        "tabevent.js",
        "tabs.js",
    ],
    deps = [
        ":core",
        ":template",
        "@com_google_javascript_closure_library//closure/goog/asserts",
        "@com_google_javascript_closure_library//closure/goog/dom",
        "@com_google_javascript_closure_library//closure/goog/dom:classlist",
        "@com_google_javascript_closure_library//closure/goog/dom:dataset",
        "@com_google_javascript_closure_library//closure/goog/dom:tagname",
        "@com_google_javascript_closure_library//closure/goog/events:event",
    ],
)

closure_js_library(
    name = "menushield",
    srcs = [
        "menushield.js",
    ],
    deps = [
        "@com_google_javascript_closure_library//closure/goog/asserts",
        "@com_google_javascript_closure_library//closure/goog/dom",
        "@com_google_javascript_closure_library//closure/goog/events",
        "@com_google_javascript_closure_library//closure/goog/math:coordinate",
        "@com_google_javascript_closure_library//closure/goog/style",
        "@com_google_javascript_closure_library//closure/goog/ui:component",
        "@com_google_javascript_closure_library//closure/goog/ui:container",
        "@com_google_javascript_closure_library//closure/goog/ui:menu",
        "@com_google_javascript_closure_library//closure/goog/ui:menubutton",
        "@com_google_javascript_closure_library//closure/goog/ui:submenu",
    ],
)

closure_js_library(
    name = "syntax",
    srcs = [
        "markdown.js",
        "syntax.js",
    ],
    deps = [
        ":core",
        "@com_google_javascript_closure_library//closure/goog/asserts",
        "@com_google_javascript_closure_library//closure/goog/dom",
    ],
)

closure_js_library(
    name = "injector",
    srcs = [
        "injector.js",
    ],
    deps = [
        # ":core",
    ],
)

closure_js_library(
    name = "ui",
    exports = [
        ":core",
        ":history",
        ":injector",
        ":keyboard",
        ":menushield",
        ":select",
        ":syntax",
        ":template",
        "@com_google_javascript_closure_library//closure/goog/asserts",
        "@com_google_javascript_closure_library//closure/goog/dom",
        "@com_google_javascript_closure_library//closure/goog/history:eventtype",
        "@com_google_javascript_closure_library//closure/goog/object",
        "@com_google_javascript_closure_library//closure/goog/promise",
    ],
)

closure_js_test(
    name = "component_test",
    srcs = [
        "component_test.js",
    ],
    entry_points = ["goog:stack.ui.ComponentTest"],
    deps = [
        ":ui",
        "@io_bazel_rules_closure//closure/library",
        "@io_bazel_rules_closure//closure/library:testing",
    ],
)

closure_js_test(
    name = "route_test",
    srcs = [
        "route_test.js",
    ],
    entry_points = ["goog:stack.ui.RouteTest"],
    deps = [
        ":core",
        ":select",
        ":app",
        # "@io_bazel_rules_closure//closure/library",
        "@io_bazel_rules_closure//closure/library:testing",
    ],
)

closure_js_test(
    name = "history_test",
    srcs = [
        "history_test.js",
    ],
    entry_points = ["goog:stack.ui.HistoryTest"],
    deps = [
        ":history",
        "@com_google_javascript_closure_library//closure/goog/dom",
        "@com_google_javascript_closure_library//closure/goog/dom:tagname",
        "@com_google_javascript_closure_library//closure/goog/events",
        "@com_google_javascript_closure_library//closure/goog/string",
        "@io_bazel_rules_closure//closure/library:testing",
    ],
)
