load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_library", "closure_js_test")

package(default_visibility = ["//visibility:public"])

closure_js_library(
    name = "core",
    srcs = ["core.js"],
    deps = [
        ":history",
        ":injector",
        ":keyboard",
        "@io_bazel_rules_closure//closure/goog/asserts",
        "@io_bazel_rules_closure//closure/goog/asserts:dom",
        "@io_bazel_rules_closure//closure/goog/dom",
        "@io_bazel_rules_closure//closure/goog/events",
        "@io_bazel_rules_closure//closure/goog/events:eventhandler",
        "@io_bazel_rules_closure//closure/goog/events:eventtarget",
        "@io_bazel_rules_closure//closure/goog/fx:dom",
        "@io_bazel_rules_closure//closure/goog/fx:easing",
        "@io_bazel_rules_closure//closure/goog/history:event",
        "@io_bazel_rules_closure//closure/goog/history:eventtype",
        "@io_bazel_rules_closure//closure/goog/object",
        "@io_bazel_rules_closure//closure/goog/promise",
        "@io_bazel_rules_closure//closure/goog/promise:resolver",
        "@io_bazel_rules_closure//closure/goog/string",
        "@io_bazel_rules_closure//closure/goog/style",
        "@io_bazel_rules_closure//closure/goog/ui:component",
        "@io_bazel_rules_closure//closure/goog/ui:control",
    ],
)

closure_js_library(
    name = "history",
    srcs = [
        "history.js",
        "history/event.js",
    ],
    deps = [
        "@io_bazel_rules_closure//closure/goog/asserts:dom",
        "@io_bazel_rules_closure//closure/goog/dom",
        "@io_bazel_rules_closure//closure/goog/dom:tagname",
        "@io_bazel_rules_closure//closure/goog/events",
        "@io_bazel_rules_closure//closure/goog/events:event",
        "@io_bazel_rules_closure//closure/goog/events:eventtarget",
        "@io_bazel_rules_closure//closure/goog/events:eventtype",
        "@io_bazel_rules_closure//closure/goog/history:event",
        "@io_bazel_rules_closure//closure/goog/history:eventtype",
        "@io_bazel_rules_closure//closure/goog/history:html5history",
        "@io_bazel_rules_closure//closure/goog/string",
    ],
)

closure_js_library(
    name = "keyboard",
    srcs = ["keyboard.js"],
    deps = [
        "@io_bazel_rules_closure//closure/goog/disposable",
        "@io_bazel_rules_closure//closure/goog/events",
        "@io_bazel_rules_closure//closure/goog/object",
        "@io_bazel_rules_closure//closure/goog/ui:keyboardshortcuthandler",
    ],
)

closure_js_library(
    name = "template",
    srcs = ["template.js"],
    deps = [
        ":core",
        "@io_bazel_rules_closure//closure/goog/dom",
        "@io_bazel_rules_closure//closure/goog/soy",
    ],
)

closure_js_library(
    name = "select",
    srcs = [
        "select.js",
        "tab.js",
        "tabevent.js",
        "tabs.js",
    ],
    deps = [
        ":core",
        ":template",
        "@io_bazel_rules_closure//closure/goog/asserts",
        "@io_bazel_rules_closure//closure/goog/dom",
        "@io_bazel_rules_closure//closure/goog/dom:classlist",
        "@io_bazel_rules_closure//closure/goog/dom:dataset",
        "@io_bazel_rules_closure//closure/goog/dom:tagname",
        "@io_bazel_rules_closure//closure/goog/events:event",
    ],
)

closure_js_library(
    name = "menushield",
    srcs = ["menushield.js"],
    deps = [
        "@io_bazel_rules_closure//closure/goog/asserts",
        "@io_bazel_rules_closure//closure/goog/dom",
        "@io_bazel_rules_closure//closure/goog/events",
        "@io_bazel_rules_closure//closure/goog/math:coordinate",
        "@io_bazel_rules_closure//closure/goog/style",
        "@io_bazel_rules_closure//closure/goog/ui:component",
        "@io_bazel_rules_closure//closure/goog/ui:container",
        "@io_bazel_rules_closure//closure/goog/ui:menu",
        "@io_bazel_rules_closure//closure/goog/ui:menubutton",
        "@io_bazel_rules_closure//closure/goog/ui:submenu",
    ],
)

closure_js_library(
    name = "syntax",
    srcs = [
        "markdown.js",
        "syntax.js",
    ],
    deps = [
        ":core",
        "@io_bazel_rules_closure//closure/goog/asserts",
        "@io_bazel_rules_closure//closure/goog/asserts:dom",
        "@io_bazel_rules_closure//closure/goog/dom",
    ],
)

closure_js_library(
    name = "injector",
    srcs = ["injector.js"],
)

closure_js_library(
    name = "ui",
    exports = [
        ":core",
        ":history",
        ":injector",
        ":keyboard",
        ":menushield",
        ":select",
        ":syntax",
        ":template",
        "@io_bazel_rules_closure//closure/goog/asserts",
        "@io_bazel_rules_closure//closure/goog/dom",
        "@io_bazel_rules_closure//closure/goog/history:eventtype",
        "@io_bazel_rules_closure//closure/goog/object",
        "@io_bazel_rules_closure//closure/goog/promise",
    ],
)

closure_js_test(
    name = "component_test",
    srcs = ["component_test.js"],
    entry_points = ["goog:stack.ui.ComponentTest"],
    tags = ["manual"],
    deps = [
        ":ui",
        "@io_bazel_rules_closure//closure/library:testing",
    ],
)

closure_js_test(
    name = "route_test",
    srcs = ["route_test.js"],
    entry_points = ["goog:stack.ui.RouteTest"],
    tags = ["manual"],
    deps = [
        ":core",
        ":select",
        "@io_bazel_rules_closure//closure/library:testing",
    ],
)

closure_js_test(
    name = "history_test",
    srcs = ["history_test.js"],
    entry_points = ["goog:stack.ui.HistoryTest"],
    tags = ["manual"],
    deps = [
        ":history",
        "@io_bazel_rules_closure//closure/goog/dom",
        "@io_bazel_rules_closure//closure/goog/dom:tagname",
        "@io_bazel_rules_closure//closure/goog/events",
        "@io_bazel_rules_closure//closure/goog/string",
        "@io_bazel_rules_closure//closure/library:testing",
    ],
)
