load("@stackb_rules_closure//closure:defs.bzl", "closure_js_library", "closure_js_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

closure_js_library(
    name = "core",
    srcs = ["core.js"],
    deps = [
        ":history",
        ":injector",
        ":keyboard",
        "@stackb_rules_closure//closure/goog/asserts",
        "@stackb_rules_closure//closure/goog/asserts:dom",
        "@stackb_rules_closure//closure/goog/dom",
        "@stackb_rules_closure//closure/goog/events",
        "@stackb_rules_closure//closure/goog/events:eventhandler",
        "@stackb_rules_closure//closure/goog/events:eventtarget",
        "@stackb_rules_closure//closure/goog/fx:dom",
        "@stackb_rules_closure//closure/goog/fx:easing",
        "@stackb_rules_closure//closure/goog/history:event",
        "@stackb_rules_closure//closure/goog/history:eventtype",
        "@stackb_rules_closure//closure/goog/object",
        "@stackb_rules_closure//closure/goog/promise",
        "@stackb_rules_closure//closure/goog/promise:resolver",
        "@stackb_rules_closure//closure/goog/string",
        "@stackb_rules_closure//closure/goog/style",
        "@stackb_rules_closure//closure/goog/ui:component",
        "@stackb_rules_closure//closure/goog/ui:control",
    ],
)

closure_js_library(
    name = "history",
    srcs = [
        "history.js",
        "history/event.js",
    ],
    deps = [
        "@stackb_rules_closure//closure/goog/asserts:dom",
        "@stackb_rules_closure//closure/goog/dom",
        "@stackb_rules_closure//closure/goog/dom:tagname",
        "@stackb_rules_closure//closure/goog/events",
        "@stackb_rules_closure//closure/goog/events:event",
        "@stackb_rules_closure//closure/goog/events:eventtarget",
        "@stackb_rules_closure//closure/goog/events:eventtype",
        "@stackb_rules_closure//closure/goog/history:event",
        "@stackb_rules_closure//closure/goog/history:eventtype",
        "@stackb_rules_closure//closure/goog/history:html5history",
        "@stackb_rules_closure//closure/goog/string",
    ],
)

closure_js_library(
    name = "keyboard",
    srcs = ["keyboard.js"],
    deps = [
        "@stackb_rules_closure//closure/goog/disposable",
        "@stackb_rules_closure//closure/goog/events",
        "@stackb_rules_closure//closure/goog/object",
        "@stackb_rules_closure//closure/goog/ui:keyboardshortcuthandler",
    ],
)

closure_js_library(
    name = "template",
    srcs = ["template.js"],
    deps = [
        ":core",
        "@stackb_rules_closure//closure/goog/dom",
        "@stackb_rules_closure//closure/goog/soy",
    ],
)

closure_js_library(
    name = "select",
    srcs = [
        "select.js",
        "tab.js",
        "tabevent.js",
        "tabs.js",
    ],
    deps = [
        ":core",
        ":template",
        "@stackb_rules_closure//closure/goog/asserts",
        "@stackb_rules_closure//closure/goog/dom",
        "@stackb_rules_closure//closure/goog/dom:classlist",
        "@stackb_rules_closure//closure/goog/dom:dataset",
        "@stackb_rules_closure//closure/goog/dom:tagname",
        "@stackb_rules_closure//closure/goog/events:event",
    ],
)

closure_js_library(
    name = "menushield",
    srcs = ["menushield.js"],
    deps = [
        "@stackb_rules_closure//closure/goog/asserts",
        "@stackb_rules_closure//closure/goog/dom",
        "@stackb_rules_closure//closure/goog/events",
        "@stackb_rules_closure//closure/goog/math:coordinate",
        "@stackb_rules_closure//closure/goog/style",
        "@stackb_rules_closure//closure/goog/ui:component",
        "@stackb_rules_closure//closure/goog/ui:container",
        "@stackb_rules_closure//closure/goog/ui:menu",
        "@stackb_rules_closure//closure/goog/ui:menubutton",
        "@stackb_rules_closure//closure/goog/ui:submenu",
    ],
)

closure_js_library(
    name = "syntax",
    srcs = [
        "markdown.js",
        "syntax.js",
    ],
    deps = [
        ":core",
        "@stackb_rules_closure//closure/goog/asserts",
        "@stackb_rules_closure//closure/goog/asserts:dom",
        "@stackb_rules_closure//closure/goog/dom",
    ],
)

closure_js_library(
    name = "injector",
    srcs = ["injector.js"],
)

closure_js_library(
    name = "ui",
    exports = [
        ":core",
        ":history",
        ":injector",
        ":keyboard",
        ":menushield",
        ":select",
        ":syntax",
        ":template",
        "@stackb_rules_closure//closure/goog/asserts",
        "@stackb_rules_closure//closure/goog/dom",
        "@stackb_rules_closure//closure/goog/history:eventtype",
        "@stackb_rules_closure//closure/goog/object",
        "@stackb_rules_closure//closure/goog/promise",
    ],
)

closure_js_test(
    name = "component_test",
    srcs = ["component_test.js"],
    entry_points = ["goog:stack.ui.ComponentTest"],
    tags = ["manual"],
    deps = [
        ":ui",
        "@stackb_rules_closure//closure/library:testing",
    ],
)

closure_js_test(
    name = "route_test",
    srcs = ["route_test.js"],
    entry_points = ["goog:stack.ui.RouteTest"],
    tags = ["manual"],
    deps = [
        ":core",
        ":select",
        "@stackb_rules_closure//closure/library:testing",
    ],
)

closure_js_test(
    name = "history_test",
    srcs = ["history_test.js"],
    entry_points = ["goog:stack.ui.HistoryTest"],
    tags = ["manual"],
    deps = [
        ":history",
        "@stackb_rules_closure//closure/goog/dom",
        "@stackb_rules_closure//closure/goog/dom:tagname",
        "@stackb_rules_closure//closure/goog/events",
        "@stackb_rules_closure//closure/goog/string",
        "@stackb_rules_closure//closure/library:testing",
    ],
)

sh_test(
    name = "tests",
    srcs = ["tests.sh"],
)
